syntax = "proto3";

option csharp_namespace = "Auto.OwnerServer";
import "google/protobuf/timestamp.proto";

package matricula;

service Matricula {
  rpc GetMatricula (OwnerRequest) returns (OwnerReply);
}

message OwnerRequest {
  string fullName = 1;
  google.protobuf.Timestamp birthDate = 2;
}

message OwnerReply {
  string vehicleNumber = 1;
}